# Explosivity_and_unsaturations

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml  test.py  tox.ini
.virtual_documents/notebook/: Balox_notebook.ipynb  Main_function_notebook.ipynb  Untitled.ipynb  canonicalize_smiles_notebook.ipynb  explosivity_notebook.ipynb  findinsaturation and findgroups notebook.ipynb  findinsaturation_and_findgroups_notebook.ipynb  highlighmol notebook.ipynb  ismetal_notebook.ipynb  submitboom_submitinsat_and_open_pubchem_sketcher_notebook.ipynb
.virtual_documents/notebooks/: Untitled.ipynb  project_report.ipynb
differentes versions et parties/: general_02.05.2024_19.52.py  general_22.04.2024_23_49.py  insaturations_21.04.24_22.38.py  iupac to smiles 20.04.24 21.29.py  kaboom.py
docs/source/: conf.py
docs/source/api/: modules.rst  (+1 more)
explosivity_and_unsaturations/: setup.py
explosivity_and_unsaturations/explosivity_and_unsaturations/: Untitled.ipynb  __init__.py  boom.py
notebook/: Balox notebook.ipynb  Balox_notebook.ipynb  Main_function_notebook.ipynb  canonicalize_smiles_notebook.ipynb  explosivity_notebook.ipynb  findinsaturation and findgroups notebook.ipynb  findinsaturation_and_findgroups_notebook.ipynb  highlighmol notebook.ipynb  insat.ipynb  ismetal notebook.ipynb  iupac_to_smiles_notebook.ipynb  project_report.ipynb  submitboom submitinsat and open_pubchem_sketcher notebook.ipynb
notebook/notebooks_of_individual_functions(old)/: explosivity_notebook.ipynb  findinsaturation_and_findgroups_notebook.ipynb  insat_notebook.ipynb  ismetal_notebook.ipynb  (+1 more)
notebooks/: project_report.ipynb
tests/: test_example_module.py
(+2 files in other folders)
